week 1 - max pairwise product

--- a/algorithmic_design/algorithmic_design.vcxproj
+++ b/algorithmic_design/algorithmic_design.vcxproj
@@ -120,6 +120,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="algorithmic_design.cpp" />
+    <ClCompile Include="week_1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="week_1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
